# rust-miniflux2feishu

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  TROUBLESHOOTING.md  build.sh  docker-compose.yml  test_payload.json  test_single.json
src/: cli.rs  handlers.rs  main.rs  state.rs
src/models/: lark.rs  miniflux.rs
