[package]
name = "rust-miniflux2feishu"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时，使用 full feature 以便方便地启动 http 服务
tokio = { version = "1", features = ["full"] }

# 轻量级 web 框架
axum = "0.8"

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 客户端，用于向飞书发送请求
ureq = { version = "2", features = ["json"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
